# The-C-20-Masterclass-Source-Code

02.EnvironmentSetup/01.ProjectTemplateModules/: main.cpp
02.EnvironmentSetup/02.ProjectTemplateHeaders/: main.cpp
04.VariablesAndDatatypesAndOperations/01.Variables_data_types_/: main.cpp
04.VariablesAndDatatypesAndOperations/04.Bitwise_operators_/: utilities.ixx
07.Sequences/06.Challenge/: main.cpp  utilities.ixx
08.Pointers_dynamic_memory_arrays/05.Challenge/: CMakeLists.txt  main.cpp  utilities.ixx  utilities1.ixx
09.Characters_and_strings/02.Challenge/: main.cpp  utilities.ixx
09.Characters_and_strings/02.Challenges/: challenges.md  main.cpp  utilities.ixx
09.Characters_and_strings/03.Challenge_ftxui/: main.cpp  utilities.ixx
10.Functions/06.Function_overloading/: CMakeLists.txt  main.cpp  overloading_1.ixx  overloading_2.ixx  overloading_4.ixx  utilities.ixx
10.Functions/07.Lambda_functions/: main.cpp  utilities.ixx
10.Functions/09.Challenge/: main.cpp  utilities.ixx
10.Functions/09.Challenge_1/: main.cpp  utilities.ixx
10.Functions/10.Challenge_2/: CMakeLists.txt  main.cpp  utilities.ixx
11.FileIO/03.Challenge/: main.cpp  utilities.ixx
12.Custom_types/01.Custom_types_basics/: ct16.ixx  ct5.ixx  utilities.ixx
12.Custom_types/03.Move_semantics/: canvas.ixx
12.Custom_types/06.Challenge_1/: CMakeLists.txt  Game.cpp  Game.hpp  README.md  main.cpp
12.Custom_types/07.Challenge_2/: Game.cpp  Game.hpp  main.cpp
12.Custom_types/08.Challenge_3/: CMakeLists.txt
12_1.Tetris_project/06.Subdirs/src/: CMakeLists.txt  main.cpp
(+136 files in other folders)
